20150305:
	* libcsoup: updated to 0.8.3 that fixed the missing '/' issue.
	* Makefile: release method updated.

20150304:
	* Win32 version: updated the FFMPEG to 2015-03-03 git-5de2dab.
	It should support H.265.

20150303:
	* video_frame_free(): fixed the issue that av_frame_free() reported
	double free coredump by only copy image data in video_frame_update().
	
	* eziup.c: duration read from the FFMPEG avformat_find_stream_info().
	The gain is faster and less mess in ArgusTV. The higher the version
	of FFMPEG the better the duration it probes.

20150302:
	* video_decode_next(): supported PTS in high version ffmpeg.

20150227: Version 3.2.3 tested in CentOS 4
	* video_frame_free(): prototype modified to clear the EZFRM pointer.
	Otherwise the binding mode would've found the dereference pointers.

20150226: Version 3.2.3 Concept verified
	* ezthumb.c: revoke the original double-decoding-frame plan.
	The double-decoding-frame could not work because ffmpeg reuses the 
	picture buffer even allocated more than one AVFrame structure.
	The fix is allocating my own picture buffer. Once a proper frame
	has been decoded, it will be moved into the picture buffer for
	future reference.
	
20150115: Version 3.2.3
	* ezthumb.c: use video_decode_valided() instead of video_decode_next()
	in most cases. The video_decode_next() still have a chance to decode
	damaged picture while I-Packet turned out to be P-Frame.

20150114:
	I've sicked in searching and reviewing ffmpeg versions to decide
	the proper APIs so using a small script file to detect them.
	* mkconfig.sh: test the ffmpeg APIs then output a configure header
	* conftest.c: support file to test the ffmpeg APIs

20150109: Version 3.2.2
	* eziup.c: Improved UI display.
	* libcsoup: Fixed a bug that failed to read file over 2GB
	* ezthumb.c: Fixed the AR correction issue.

20140830: Version 3.2.1
	* libcsoup: updated to 0.8.1. Ezthumb applies the new debug scheme.

20140512: Pre Version 3.2.0