@@ -28,7 +28,7 @@
 #include "libcsoup.h"
 #include "ezthumb_debug.h"
 
-#define EZTHUMB_VERSION		"3.2.3"
+#define EZTHUMB_VERSION		"3.3.0"
 
 #define EZ_ERR_NONE		0
 #define EZ_ERR_EOP		-1	/* End Of Process */
