@@ -1,7 +1,7 @@
 Begin4
 Title:          ezthumb
-Version:        3.0.4
-Entered-date:   2013-10-09
+Version:        3.3.0
+Entered-date:   2015-3-11
 Description:    A video thumbnail generator based on FFMPEG library.
                 The basic function is to sample screenshots from video files
                 and tile them into a single picture. It can also generate
@@ -10,9 +10,9 @@ Keywords:       ezthumb, thumbnail, screenshot, FFMPEG
 Author:	        "Andy Xuming" <xuming@users.sourceforge.net>
 Maintained-by:  "Andy Xuming" <xuming@users.sourceforge.net>
 Primary-site:   https://sourceforge.net/projects/ezthumb/
-                282K   ezthumb-3.0.4.tar.gz
-                12.4M  ezthumb-3.0.4-win-bin.tar.gz
-		1K     ezthumb-3.0.4.lsm
+                23.8M  ezthumb-3.3.0.tar.gz
+                7.1M   ezthumb-3.3.0-win-bin.tar.gz
+		1K     ezthumb-3.3.0.lsm
 Alternate-site: 
 Platforms:      Linux/XWindow Microsoft/Windows Win32
 Copying-policy: GPLv3+
